--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@spartan-ng/ui-tooltip-brain": "0.0.1-alpha.356",
     "class-variance-authority": "^0.6.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-angular": "^14.0.0",
     "ngx-scrollbar": "^13.0.1",
     "ngx-sonner": "^2.0.0",
