--- a/libs/models/project.json
+++ b/libs/models/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "bs-theme-selector",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/ui/ui-theme-selector/src",
+  "name": "models",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/models/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": [],
@@ -10,15 +10,14 @@
       "executor": "@nx/angular:ng-packagr-lite",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/ui/ui-theme-selector/ng-package.json",
-        "tailwindConfig": "libs/ui/ui-theme-selector/tailwind.config.js"
+        "project": "libs/models/ng-package.json"
       },
       "configurations": {
         "production": {
-          "tsConfig": "libs/ui/ui-theme-selector/tsconfig.lib.prod.json"
+          "tsConfig": "libs/models/tsconfig.lib.prod.json"
         },
         "development": {
-          "tsConfig": "libs/ui/ui-theme-selector/tsconfig.lib.json"
+          "tsConfig": "libs/models/tsconfig.lib.json"
         }
       },
       "defaultConfiguration": "production"
@@ -27,7 +26,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ui/ui-theme-selector/jest.config.ts"
+        "jestConfig": "libs/models/jest.config.ts"
       }
     },
     "lint": {
